2011-11-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fix a memory leak - buffer allocated by readline() should be
  freed by user.

* configure.ac: Clean-up of SDL detection - restore the "Don't redefine main"
  snippet that got mistakenly deleted in revisions 1.108-1.109.
  
* configure.ac, Makefile.in, DOC/README.android: Cleanup in detection of
  libreadline and OpenGL:
  Renamed options --enable-monitor-readline and --enable-opengl to
  --with-readline and --with-opengl, respectively - Autoconf manual recommends
  the --with prefix for options requiring external software.
  Since the AC_CHECK_HEADER (used in OpenGL detection) requires proper setting
  of CPPFLAGS, rudimentary support for this variable has been added.

* sdl/video_gl.c: Fix wrong definition of "black" colour for the BGRA32 pixel
  format, which caused a visible blue border around the screen with bilinear
  filtering and stretch >= 2.


2011-10-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* afile.c, cassette.[ch], img_tape.[ch], screen.c, ui.c, Makefile.in:
  Cassette-related code cleanup - functionality related to handling of
  tape image files split from afile.c and cassette.c to new module img_tape.
  Functional changes: During cassette insert the old tape is not unmounted
  until opening of the new tape ended successfully; Added error message when
  tape opening fails with the -tape command parameter.


2011-09-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/cart.txt, DOC/USAGE, atari800.man, cartridge.[ch], ui.c: Added support
  for Atrax SDX 64/128K cartridge mapping and for the Turbosoft 64/128
  cartridge mappings.

* cartridge.c: Fixed a bug in OSS 034M/043M mappings - the area filled by $FF
  should be $A000-$AFF instead of $8000-$9FFF.


2011-09-04  Kostas Nakos  <knakos@gmail.com>
* android/*: Added paddle emulation


2011-09-03  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Code cleanup - split MONITOR_Run() into separate functions for