@@ -79,6 +79,14 @@ int PBI_PROTO80_Initialise(int *argc, char *argv[])
 	return TRUE;
 }
 
+void PBI_PROTO80_Exit(void)
+{
+	if (PBI_PROTO80_enabled) {
+		free(proto80rom);
+		PBI_PROTO80_enabled = FALSE;
+	}
+}
+
 int PBI_PROTO80_ReadConfig(char *string, char *ptr)
 {
 	if (strcmp(string, "PROTO80_ROM") == 0)
