@@ -3,6 +3,7 @@
 
 #include "atari.h"
 int PBI_PROTO80_Initialise(int *argc, char *argv[]);
+void PBI_PROTO80_Exit(void);
 int PBI_PROTO80_ReadConfig(char *string, char *ptr);
 void PBI_PROTO80_WriteConfig(FILE *fp);
 int PBI_PROTO80_D1GetByte(UWORD addr, int no_side_effects);
